[package]
name = "raymarcher"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
glam = "0.27.0"
image = { version = "0.25.1", default-features = false, features = ["png", "rayon"] }
rand = "0.8.5"
rayon = "1.10.0"
